{{$NEXT}}

0.32      2015-06-28 17:04:24+02:00 Europe/Madrid
    [ BUGS ]
    * GH#40 - Prevent unsaved objects from removing all docs when calling delete().

    [ ENHANCEMENTS ]
    * Skip unblessing for DateTime::Tiny the same way as for DateTime objects.
    * GH#32 - Ensure numbers are stored as numbers for Num based types.

    [ CLEANUP ]
    * Cursor wrapper cleanup
    * Engine collapse/expand small refactor

    [ DOCS ]
    * GH#31 - Remove cookbook recomendation to use Raw trait on DateTime fields.

0.31      2015-04-19 03:00:50+02:00 Europe/Madrid
    [ CLEANUP ]
    * Changes file fixed after last release problems

0.30 Sun Apr 19 2:56:00 CEST 2015
    [ ENHANCEMENTS ]
    * find_one() now accepts a MongoDB::OID object

    [ CLEANUP ]
    * Removed unused class Mongoose::Digest
    * Bumped dependency versions and removed back-compat code

0.29 Sat Apr 18 23:56:30 CEST 2015
    [ BUGS ]
    * Fixed test that was failing randombly on mongodb v2.6.x (diegok)

0.28 Sat Apr 18 16:51:40 CEST 2015
    [ BUGS ]
    * ensure all DBRef's are sorted hashes to make it work with mongodb v2.6.x (diegok)

0.27 Mon Sep  1 19:25:23 CEST 2014
    [ ENHANCEMENTS ]
    * add optional auth_db_name param for auth against other dbs (gmorten1)
    * testing against remote dbs (gmorten1)

0.26 Sun Aug 24 11:18:25 PDT 2014
    [ CLEANUP ]
    * GH#36 - "package DB" gets $VERSION added by dzil auto-versioning plugin

0.25 Thu Aug 21 16:53:40 PDT 2014
    [ CLEANUP ]
    * .24 inadvertently brought local-libs into dist

0.24 Wed Aug 20 09:12:41 PDT 2014
    [ BUGS ]
    * GH#35 - Hack to prevent engine from creating self-references

0.23 Mon Jan 28 19:28:58 CET 2013
    [ ENHANCEMENTS ]
    * GH#26 - multiple hosts/dbs for different classes (diegok)

0.22 Mon Jan 21 16:14:38 CET 2013
    [ BUGS ]
    * RT#81725 - save HashRef[ArrayRef[Class]] now works; loading does not (yet).
    * GH#22 - load_schema with shorten MOP issue fixed (dagolden)