@@ -36,9 +36,9 @@ power of MongoDB within your Moose classes, without sacrificing MongoDB's
 power, flexibility and speed.
 
 It's loosely inspired by Ruby's MongoMapper,
-which is in turn loosely based on the ActiveRecord pattern. 
+which is in turn loosely based on the ActiveRecord pattern.
 
-Start by reading the introduction L<Mongoose::Intro>. 
+Start by reading the introduction L<Mongoose::Intro>.
 
 Or proceed directly to the L<Mongoose::Cookbook> for many day-to-day recipes.
 
@@ -54,22 +54,19 @@ The connection defaults to whatever MongoDB defaults are
 (typically localhost:27017).
 
 For more control over the connection, C<db> takes the same parameters as
-L<MongoDB::MongoClient>, plus C<auth_db_name>. 
+L<MongoDB::MongoClient>.
 
     my $db = Mongoose->db(
-        host          => 'mongodb://somehost:27017',
-        query_timeout => 60,
-        db_name       => 'mydb',
-        auth_db_name  => 'admin',
-        username      => 'myuser',
-        password      => 'mypass',
+        host           => 'mongodb://somehost:27017',
+        read_pref_mode => 'secondaryPreferred',
+        db_name        => 'mydb',
+        username       => 'myuser',
+        password       => 'mypass',
+        ssl            => 1
     );
 
-This will, in turn, instantiate a L<MongoDB::MongoClient> instance after
-authenticating user vs C<admin> with all given parameters, and return
+This will, in turn, instantiate a L<MongoDB::MongoClient> and return
 a L<MongoDB::Database> object for C<mydb>.
-
-C<auth_db_name> defaults to the value of C<db_name>.
 
 B<Important>: Mongoose will always defer connecting to Mongo
 until the last possible moment. This is done to prevent
@@ -96,13 +93,13 @@ by calling db() several times:
 
     # Default host/database (connect now!)
     my $db = Mongoose->db( 'mydb' );
-    
+
     # Other database for some class (defer connection)
     Mongoose->db( db_name => 'my_other_db', class => 'Log' );
 
     # Other database on other host for several classes
-    Mongoose->db( 
-        db_name => 'my_remote_db', 
+    Mongoose->db(
+        db_name => 'my_remote_db',
         host    => 'mongodb://192.168.1.23:27017',
         class   => [qw/ Author Post /]
     );
@@ -139,48 +136,6 @@ Will shorten the module name to it's last bit:
 
     Author->new( ... );
 
-=head2 naming 
-
-By default, Mongoose composes the Mongo collection name from your package name 
-by replacing double-colon C<::> with underscores C<_>, separating camel-case,
-such as C<aB> with C<a_b> and uppercase with lowercase letters. 
-
-This method let's you change this behaviour, by setting
-the collection naming routine with a C<closure>.
-
-The closure receives the package name as first parameter and 
-should return the collection name. 
-
-    # let me change the naming strategy
-    #  for my mongo collections
-    #  to plain lowercase
-
-    Mongoose->naming( sub { lc(shift) } );
-
-    # if you prefer, use a predefined naming template
-
-    Mongoose->naming( 'plural' );  # my favorite
-
-    # or combine them 
-
-    Mongoose->naming( ['decamel','plural' ] );  # same as 'shorties'
-
-Here are the templates available:
-
-     template     | package name             |  collection
-    --------------+--------------------------+---------------------------
-     short        | MyApp::Schema::FooBar    |  foobar
-     plural       | MyApp::Schema::FooBar    |  foobars
-     decamel      | MyApp::Schema::FooBar    |  foo_bar
-     lower        | MyApp::Schema::FooBar    |  myapp::schema::author
-     upper        | MyApp::Schema::FooBar    |  MYAPP::SCHEMA::AUTHOR
-     undercolon   | MyApp::Schema::FooBar    |  myapp_schema_foobar
-     default      | MyApp::Schema::FooBar    |  myapp_schema_foo_bar
-     none         | MyApp::Schema::Author    |  MyApp::Schema::Author
-
-BTW, you can just use the full package name (template C<none>) as a collection 
-in Mongo, as it won't complain about colons in the collection name. 
-
 =head2 connection
 
 Sets/returns the current connection object, of class L<MongoDB::MongoClient>.
@@ -189,7 +144,16 @@ Defaults to whatever MongoDB defaults.
 
 =head2 disconnect
 
-Unsets the Mongoose connection handler. 
+Unsets the Mongoose connection handler.
+
+=head1 COLLECTION NAMING
+
+By default, Mongoose composes the Mongo collection name from your package name
+by replacing double-colon C<::> with underscores C<_>, separating camel-case,
+such as C<aB> with C<a_b> and uppercase with lowercase letters.
+
+This behaviour can be changed by choosing other named method or by setting
+the collection naming routine with a C<closure> as exlained in L<Mongoose::Role::Naming>.
 
 =head1 REPOSITORY
 
@@ -197,7 +161,7 @@ Fork me on github: L<http://github.com/rodrigolive/mongoose>
 
 =head1 BUGS
 
-This is a WIP, now *beta* quality software. 
+This is a WIP, now *beta* quality software.
 
 Report bugs via Github Issue reporting L<https://github.com/rodrigolive/mongoose/issues>.
 Test cases highly desired and appreciated.
