@@ -1,11 +1,11 @@
-package Mongoose::Engine::V1;
+package Mongoose::Engine::V0;
 use Moose::Role;
 
 use Carp;
 use Scalar::Util qw/refaddr reftype/;
 use List::Util qw/first/;
-
 use Mongoose::Cursor; #initializes moose
+use Tie::IxHash;
 
 with 'Mongoose::Role::Collapser';
 with 'Mongoose::Role::Expander';
@@ -20,9 +20,9 @@ sub collapse {
         my $ref_id = $duplicate->_id;
         return undef unless defined $class && $ref_id;
         return undef if $self->_id && $self->_id eq $ref_id; # prevent self references?
-        return MongoDB::DBRef->new(
-            ref => $class->meta->{mongoose_config}{collection_name},
-            id  => $ref_id
+        return Tie::IxHash->new(
+            '$ref' => $class->meta->{mongoose_config}->{collection_name},
+            '$id'  => $ref_id
         );
     }
 
@@ -62,9 +62,9 @@ sub _collapse {
     if ( my $class = blessed $value ) {
         if ( ref $value eq 'HASH' && defined ( my $ref_id = $value->{_id} ) ) {
             # it has an id, so join ref it
-            return MongoDB::DBRef->new(
-                ref => $class->meta->{mongoose_config}{collection_name},
-                id  => $ref_id
+            return Tie::IxHash->new(
+                '$ref' => $class->meta->{mongoose_config}{collection_name},
+                '$id'  => $ref_id
             );
         }
         elsif ( ref($value) =~ /^DateTime(?:\:\:Tiny)?$/ ) {
@@ -84,9 +84,9 @@ sub _collapse {
             }
             elsif ( $aryclass && $aryclass->does('Mongoose::Document') ) {
                 $item->_save( @scope, $self );
-                push @arr, MongoDB::DBRef->new(
-                    ref => $aryclass->meta->{mongoose_config}{collection_name},
-                    id  => $item->_id
+                push @arr, Tie::IxHash->new(
+                    '$ref' => $aryclass->meta->{mongoose_config}{collection_name},
+                    '$id'  => $item->_id
                 );
             }
             else {
@@ -125,9 +125,9 @@ sub _unbless {
         }
         elsif ( $class->does('Mongoose::Document') ) {
             $obj->_save( @scope, $self );
-            $ret = MongoDB::DBRef->new(
-                ref => $class->meta->{mongoose_config}->{collection_name},
-                id  => $obj->_id
+            $ret = Tie::IxHash->new(
+                '$ref' => $class->meta->{mongoose_config}->{collection_name},
+                '$id'  => $obj->_id
             );
         }
         elsif ( $class->isa('Mongoose::Join') ) {
@@ -155,10 +155,10 @@ sub expand {
     $scope = {} unless ref $scope eq 'HASH';
 
     # check if it's an straight ref
-    if ( ref $doc eq 'MongoDB::DBRef' ) {
-        return $scope->{$doc->id} if defined $scope->{$doc->id};
-        return $class_main->find_one({ _id => $doc->id });
-        #TODO: set at $scope?
+    if ( defined $doc->{'$id'} ) {
+        my $ref_id = $doc->{'$id'};
+        defined $scope->{$ref_id} and return $scope->{$ref_id};
+        return $class_main->find_one({ _id => $doc->{'$id'} });
     }
 
     for my $attr ( $class_main->meta->get_all_attributes ) {
@@ -176,7 +176,7 @@ sub expand {
                 my $param = $type->{type_parameter};
                 if( my $param_class = $param->{class} ) {
                     for my $key ( keys %{ $doc->{$name} || {} } ) {
-                        $doc->{$name}{$key} = $param_class->expand( $doc->{$name}{$key}, undef, $scope );
+                        $doc->{$name}->{$key} = $param_class->expand( $doc->{$name}->{$key}, undef, $scope );
                     }
                 }
             }
@@ -190,19 +190,17 @@ sub expand {
                 if( my $param_class = $param->{class} ) {
                     my @objs;
                     for my $item ( @{ $doc->{$name} || [] } ) {
-                        #TODO: why not to call myself always like:
-                        #push @obj, $param_class->expand( $item, undef, $scope );
                         if ( $param_class->does('Mongoose::EmbeddedDocument') ) {
                             push @objs, $param_class->expand($item);
                         }
                         elsif ( $param_class->does('Mongoose::Document') ) {
-                            if( my $circ_doc = $scope->{ $item->id } ) {
+                            my $_id = delete $item->{'$id'};
+                            if( my $circ_doc = $scope->{ $_id } ) {
                                 push @objs, bless( $circ_doc , $param_class );
                             }
                             else {
-                                if ( my $obj = $param_class->find_one({ _id => $item->id }, undef, $scope ) ) {
-                                    push @objs, $obj;
-                                }
+                                my $ary_obj = $param_class->find_one({ _id=>$_id }, undef, $scope );
+                                push @objs, $ary_obj if defined $ary_obj;
                             }
                         }
                     }
@@ -224,17 +222,15 @@ sub expand {
 
         if( $class->can('meta') ) { # moose subobject
 
-            if ( $class->does('Mongoose::EmbeddedDocument') ) {
+            if( $class->does('Mongoose::EmbeddedDocument') ) {
                 $doc->{$name} = bless $doc->{$name}, $class;
             }
-            elsif ( $class->does('Mongoose::Document') ) {
-                if ( ref $doc->{$name} eq 'MongoDB::DBRef' ) {
-                    my $_id = $doc->{$name}->id;
-                    if ( my $circ_doc = $scope->{"$_id"} ) {
+            elsif( $class->does('Mongoose::Document') ) {
+                if( my $_id = delete $doc->{$name}->{'$id'} ) {
+                    if( my $circ_doc = $scope->{"$_id"} ) {
                         $doc->{$name} = bless( $circ_doc , $class );
                         $scope->{ "$circ_doc->{_id}" } = $doc->{$name};
-                    }
-                    else {
+                    } else {
                         $scope->{ "$doc->{_id}" } = $doc;
                         $doc->{$name} = $class->find_one({ _id=>$_id }, undef, $scope );
                     }
@@ -301,21 +297,23 @@ sub _unbless_full {
     Data::Structure::Util::unbless( shift );
 }
 
-sub save { _save(@_) }
+sub save {
+    &_save(@_);
+}
+
 sub _save {
-    my ( $self, @scope ) = @_;
+    my ($self, @scope )=@_;
     my $coll = $self->collection;
     my $doc = $self->collapse( @scope );
     return unless defined $doc;
 
-    if ( $self->_id ) {
+    if( $self->_id  ) {
         ## update on my id
         my $id = $self->_id;
         my $ret = $coll->update( { _id=>$id }, $doc, { upsert=>1 } );
         return $id;
-    }
-    else {
-        if ( ref $self->meta->{mongoose_config}->{pk} ) {
+    } else {
+        if( ref $self->meta->{mongoose_config}->{pk} ) {
             # if we have a pk and no _id, we must have a new
             # document, so we insert to allow the pk constraint
             # to ensure uniqueness; the 'safe' parameter ensures
@@ -323,8 +321,7 @@ sub _save {
             my $id = $coll->insert( $doc, { safe => 1 } );
             $self->_id( $id );
             return $id;
-        }
-        else {
+        } else {
             # save without pk
             my $id = $coll->save( $doc );
             $self->_id( $id );
@@ -332,14 +329,14 @@ sub _save {
             # if there are any new, unsaved, documents in the scope,
             # we have circular relation between $self and @scope
             my @unsaved;
-            for my $x ( @scope ) {
-                unless( $x->_id ) {
+            for my $x (@scope) {
+                unless($x->_id) {
                     push @unsaved, $x;
                 }
             }
 
             if (@unsaved) {
-                while ( my $x = pop(@unsaved) ) {
+                while (my $x = pop(@unsaved)) {
                     $x->_save(@unsaved);
                 }
                 $self->_save;
@@ -469,7 +466,7 @@ sub count { shift->collection->count(@_) }
 
 =head1 NAME
 
-Mongoose::Engine::V1 - serialization for MongoDBv1 driver
+Mongoose::Engine::V0 - heavy lifting done here
 
 =head1 DESCRIPTION
 
