@@ -77,9 +77,17 @@ for my $coll (qw/ bank_account checking_account /) {
 {
 	my $coll = CheckingAccount->collection;
 	ok( my $account = $coll->find->next, 'Get from collection' );
-	isa_ok( my $ba = $account->{overdraft_account}, 'MongoDB::DBRef' );
-	is( ref($ba->id), 'MongoDB::OID', 'foreign key stored' );
-	is( $ba->ref, 'bank_account', 'make sure its foreign' );
+    if ( Mongoose->_mongodb_v1 ) {
+        isa_ok( my $ba = $account->{overdraft_account}, 'MongoDB::DBRef' );
+        is( ref($ba->id), 'MongoDB::OID', 'foreign key stored' );
+	    is( $ba->ref, 'bank_account', 'make sure its foreign' );
+    }
+    else {
+        ok( my $ba = $account->{overdraft_account} );
+        is( ref($ba->{'$id'}), 'MongoDB::OID', 'foreign key stored' );
+	    is( $ba->{'$ref'}, 'bank_account', 'make sure its foreign' );
+    }
+
 }
 
 done_testing;
